--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="navbar navbar-app navbar-absolute-top">
     <div class="navbar-brand navbar-brand-center" yield-to="title">
-      宅语菜园
+      未登录|尊敬的用户名称
     </div>
     <div class="btn-group pull-left">
       <div ui-toggle="sidebarLeft" class="btn sidebar-toggle">
@@ -27,7 +27,7 @@
     </div>
     <div class="btn-group pull-right" yield-to="navbarAction">
       <a href="#/forms" class="btn btn-navbar">
-        <i class="fa fa-exclamation-circle fa-navbar"></i>登陆
+        <i class="fa fa-exclamation-circle fa-navbar"></i>筛选
       </a>
     </div>
   </div>
@@ -35,16 +35,14 @@
   <div class="navbar navbar-app navbar-absolute-bottom">
     <div class="btn-group justified">
       <a href="#/" class="btn btn-navbar">
-        <i class="fa fa-home fa-navbar"></i>推荐
+        <i class="fa fa-home fa-navbar"></i>菜品
       </a>
       <a href="#/" class="btn btn-navbar">
-        <i class="fa fa-home fa-navbar"></i>菜单
+        <i class="fa fa-home fa-navbar"></i>订单
       </a>
-      <a href="#/" class="btn btn-navbar">
-        <i class="fa fa-home fa-navbar"></i>购物车
-      </a>
+
       <a href="#/forms" class="btn btn-navbar">
-        <i class="fa fa-exclamation-circle fa-navbar"></i>设置
+        <i class="fa fa-exclamation-circle fa-navbar"></i>我的信息
       </a>
     </div>
   </div>
