修改首页UI的布局样式

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="navbar navbar-app navbar-absolute-top">
     <div class="navbar-brand navbar-brand-center" yield-to="title">
-      未登录|尊敬的用户名称
+      宅语菜园
     </div>
     <div class="btn-group pull-left">
       <div ui-toggle="sidebarLeft" class="btn sidebar-toggle">
