--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <script type="text/javascript" src="../public/dist/js/reserveLoad.min.js"></script>
 
 </head>
-<body>
+<body ng-controller="homeCtrl">
 
 <div class="app">
 
   <div class="navbar navbar-app navbar-absolute-top">
     <div class="navbar-brand navbar-brand-center" yield-to="title">
-      未登录|尊敬的用户名称
+      {{title}}
     </div>
     <div class="btn-group pull-left">
       <div ui-toggle="sidebarLeft" class="btn sidebar-toggle">
@@ -41,7 +41,7 @@
         <i class="fa fa-home fa-navbar"></i>订单
       </a>
 
-      <a href="#/forms" class="btn btn-navbar">
+      <a href="/profile" class="btn btn-navbar">
         <i class="fa fa-exclamation-circle fa-navbar"></i>我的信息
       </a>
     </div>
@@ -62,8 +62,10 @@
   (function () {
     var lang = "zh";
     reserveLoad(
-         ['./public/dist/js/angular-all.min.js', 'angular'], ['./public/dist/js/ie.min.js'], [
-      './public/dist/js/jsEasy.min.js', 'jsEasy'], function (errorUrl) {
+         ['./public/dist/js/angular-all.min.js', 'angular'],
+         ['./public/src/libs/dist/js/mobile-angular-ui.js'],
+         ['./public/dist/js/ie.min.js'],
+         ['./public/dist/js/jsEasy.min.js', 'jsEasy'], function (errorUrl) {
            angular.bootstrap(document, ['jsEasy']);
          });
   })();
