临时保存 登录机能开发

--- a/public/src/tpl/login.html
+++ b/public/src/tpl/login.html
@@ -27,10 +27,10 @@
       </fieldset>
       <hr>
 
-      <button class="btn btn-primary btn-block">
+      <button class="btn btn-primary btn-block" ng-click="register()">
         新用户注册
       </button>
-      <button class="btn btn-primary btn-block">
+      <button class="btn btn-primary btn-block" ng-click="login()">
         已有帐号登录
       </button>
 
