登录机能 前台 完了

--- a/public/src/tpl/login.html
+++ b/public/src/tpl/login.html
@@ -6,7 +6,7 @@
 <div class="scrollable">
   <div class="scrollable-content section">
 
-    <form role="form" ng-submit='login()'>
+    <form role="form" ng-submit='submit()'>
       <fieldset>
         <legend></legend>
         <div class="form-group has-success has-feedback">
