--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
 <head>
   <title></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="yes"/>
+
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
   <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-hover.css" />
   <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-base.css" />
   <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-desktop.css" />
+  <link rel="stylesheet" href="./public/dist/css/style.css"/>
 
   <script type="text/javascript" src="../public/dist/js/reserveLoad.min.js"></script>
 
@@ -34,10 +40,10 @@
 
   <div class="navbar navbar-app navbar-absolute-bottom">
     <div class="btn-group justified">
-      <a href="#/" class="btn btn-navbar">
+      <a href="/" class="btn btn-navbar">
         <i class="fa fa-home fa-navbar"></i>菜品
       </a>
-      <a href="#/" class="btn btn-navbar">
+      <a href="/" class="btn btn-navbar">
         <i class="fa fa-home fa-navbar"></i>订单
       </a>
 
