--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 </head>
 <body ng-controller="homeCtrl">
 
+<!-- Sidebars -->
+<div ng-include="'public/dist/tpl/sidebar.html'"
+     track-as-search-param='true'
+     class="sidebar sidebar-left"></div>
+
+<div ng-include="'public/dist/tpl/sidebarRight.html'"
+     class="sidebar sidebar-right"></div>
+
 <div class="app">
 
   <div class="navbar navbar-app navbar-absolute-top">
