--- a/public/src/tpl/profile.html
+++ b/public/src/tpl/profile.html
@@ -9,7 +9,7 @@
       <div class="list-group-item list-group-item-home" style="margin-top: 20px;">
 
         <div class="media-body">
-          我的订单 <i class="fa fa-chevron-right pull-right"></i>
+          我的地址 <i class="fa fa-chevron-right pull-right"></i>
         </div>
       </div>
 
