--- a/public/src/tpl/sidebar.html
+++ b/public/src/tpl/sidebar.html
@@ -1,4 +1,4 @@
-<div class="scrollable">
+<div class="scrollable" toggleable parent-active-class="sidebar-left-in" id="mainSidebar">
   <h1 class="scrollable-header app-name">功能列表</h1>
   <div class="scrollable-content">
     <div class="list-group" ui-turn-off='sidebarLeft'>
