--- a/index.html
+++ b/index.html
@@ -10,35 +10,38 @@
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-hover.css" />
-  <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-base.css" />
-  <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-desktop.css" />
+
+    <link rel="stylesheet" href="./public/src/vendor/mobile-angular-ui/dist/css/mobile-angular-ui.min.css" />
+
   <link rel="stylesheet" href="./public/dist/css/style.css"/>
 
   <script type="text/javascript" src="../public/dist/js/reserveLoad.min.js"></script>
 
 </head>
-<body ng-controller="homeCtrl">
+<body ng-controller="MainController">
 
-<!-- Sidebars -->
-<div ng-include="'public/dist/tpl/sidebar.html'"
-     track-as-search-param='true'
-     class="sidebar sidebar-left"></div>
+<div class="sidebar sidebar-left" toggleable parent-active-class="sidebar-left-in" id="mainSidebar">
+    <h1 class="app-name">My App</h1>
 
-<div ng-include="'public/dist/tpl/sidebarRight.html'"
-     class="sidebar sidebar-right"></div>
+    <div class="scrollable">
+        <div class="scrollable-content">
+            <div class="list-group" toggle="off" bubble target="mainSidebar">
+                <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
+                <!-- ... -->
+            </div>
 
+        </div>
+    </div>
+</div>
 <div class="app">
 
   <div class="navbar navbar-app navbar-absolute-top">
-    <div class="navbar-brand navbar-brand-center" yield-to="title">
-      {{title}}
-    </div>
-    <div class="btn-group pull-left">
-      <div ui-toggle="sidebarLeft" class="btn sidebar-toggle">
-        <i class="fa fa-bars"></i>菜单
+
+      <div class="btn-group pull-left">
+          <div ng-click="toggle('mainSidebar')" class="btn btn-navbar sidebar-toggle">
+              <i class="fa fa-bars"></i> Menu
+          </div>
       </div>
-    </div>
     <div class="btn-group pull-right" yield-to="navbarAction">
       <a href="#/forms" class="btn btn-navbar">
         <i class="fa fa-exclamation-circle fa-navbar"></i>筛选
@@ -77,7 +80,7 @@
     var lang = "zh";
     reserveLoad(
          ['./public/dist/js/angular-all.min.js', 'angular'],
-         ['./public/src/libs/dist/js/mobile-angular-ui.js'],
+         ['./public/src/vendor/mobile-angular-ui/dist/js/mobile-angular-ui.js'],
          ['./public/dist/js/ie.min.js'],
          ['./public/dist/js/jsEasy.min.js', 'jsEasy'], function (errorUrl) {
            angular.bootstrap(document, ['jsEasy']);
