--- a/public/src/tpl/login.html
+++ b/public/src/tpl/login.html
@@ -8,8 +8,7 @@
 
     <form role="form" ng-submit='submit()'>
       <fieldset>
-        <legend></legend>
-        <div class="form-group has-success has-feedback">
+        <legend></legend>        <div class="form-group has-success has-feedback">
           <label>手机号</label>
           <input type="text"
                  ng-model="telephone"
