--- a/public/src/tpl/sidebar.html
+++ b/public/src/tpl/sidebar.html
@@ -3,7 +3,7 @@
   <div class="scrollable-content">
     <div class="list-group" ui-turn-off='sidebarLeft'>
       <a class="list-group-item" href="/">主页 <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="/scroll">热门推荐 <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="/detail">热门推荐 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="/toggle">低热量 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="/tabs">火锅 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="/accordion">我的订单 <i class="fa fa-chevron-right pull-right"></i></a>
