开始编写菜单列表界面

--- a/public/src/tpl/index.html
+++ b/public/src/tpl/index.html
@@ -10,7 +10,7 @@
           <i class="fa fa-gamepad feature-icon text-primary"></i>
         </div>
         <div class="media-body">
-          <h3 class="media-heading">糖醋排骨 月售:30份 价格:25元/份</h3>
+          <h3 class="media-heading">{{message}}</h3>
 
         </div>
       </div>
