增加 DetailService  和 food/get.json 接口

--- a/public/src/tpl/detail.html
+++ b/public/src/tpl/detail.html
@@ -5,7 +5,7 @@
 <div class="scrollable">
     <div class="scrollable-content">
         <div class="section">
-            <img src="/public/images/detail01.jpg">
+            <img src="{{file}}">
         </div>
         <div class="section">
             <div class="panel-group"
