--- a/public/src/tpl/index.html
+++ b/public/src/tpl/index.html
@@ -2,61 +2,16 @@
   <div class="scrollable-content">
 
     <div class="list-group text-center">
-      <div class="list-group-item list-group-item-home">
 
-      </div>
-      <div class="list-group-item list-group-item-home media">
+      <div class="list-group-item list-group-item-home media" ng-repeat='food  in foodlist'>
         <div>
-          <i class="fa fa-gamepad feature-icon text-primary"></i>
+          {{food.foodsrc}}
         </div>
         <div class="media-body">
-          <h3 class="media-heading">{{message}}</h3>
-
+          <h3 class="media-heading">{{food.foodname}}|{{food.foodprice}}元|{{food.selltotal}}</h3>
         </div>
       </div>
 
-
-      <div class="list-group-item list-group-item-home media">
-        <div>
-          <i class="fa fa-gamepad feature-icon text-primary"></i>
-        </div>
-        <div class="media-body">
-          <h3 class="media-heading">糖醋排骨 月售:30份 价格:25元/份</h3>
-
-        </div>
-      </div>
-
-
-      <div class="list-group-item list-group-item-home media">
-        <div>
-          <i class="fa fa-gamepad feature-icon text-primary"></i>
-        </div>
-        <div class="media-body">
-          <h3 class="media-heading">糖醋排骨 月售:30份 价格:25元/份</h3>
-
-        </div>
-      </div>
-
-
-      <div class="list-group-item list-group-item-home media">
-        <div>
-          <i class="fa fa-gamepad feature-icon text-primary"></i>
-        </div>
-        <div class="media-body">
-          <h3 class="media-heading">糖醋排骨 月售:30份 价格:25元/份</h3>
-
-        </div>
-      </div>
-
-      <div class="list-group-item list-group-item-home media">
-        <div>
-          <i class="fa fa-gamepad feature-icon text-primary"></i>
-        </div>
-        <div class="media-body">
-          <h3 class="media-heading">糖醋排骨 月售:30份 价格:25元/份</h3>
-
-        </div>
-      </div>
 
     </div>
 
