菜品列表可以显示数据 。。。

--- a/public/src/tpl/index.html
+++ b/public/src/tpl/index.html
@@ -8,7 +8,7 @@
           {{food.foodsrc}}
         </div>
         <div class="media-body">
-          <h3 class="media-heading">{{food.foodname}}|{{food.foodprice}}元|{{food.selltotal}}</h3>
+          <h3 class="media-heading">{{food.foodname}}|{{food.foodprice}}元|销售量:{{food.selltotal}}</h3>
         </div>
       </div>
 
