--- a/public/src/tpl/index.html
+++ b/public/src/tpl/index.html
@@ -2,13 +2,14 @@
   <div class="scrollable-content">
 
     <div class="list-group text-center">
-
+      <div class="list-group-item list-group-item-home">
+        <h3>Mobile Angular UI </h3>
+      </div>
       <div class="list-group-item list-group-item-home media" ng-repeat='food  in foodlist'>
-        <div>
-          {{food.foodsrc}}
-        </div>
+
         <div class="media-body">
-          <h3 class="media-heading">{{food.foodname}}|{{food.foodprice}}元|销售量:{{food.selltotal}}</h3>
+          <h3 class="media-heading"><img ng-src="{{food.foodsrc}} " width="20%" height="20%">
+            {{food.foodname}}{{food.foodprice}}元|销售量:{{food.selltotal}}</h3>
         </div>
       </div>
 
