添加 后台express  代码

--- a/public/src/tpl/detail.html
+++ b/public/src/tpl/detail.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <div class="section section-break">
+        <div class="section">
             <a href=""
                class="btn btn-primary">加入购物车</a>
             <a href=""
