--- a/public/src/tpl/detail.html
+++ b/public/src/tpl/detail.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="scrollable">
-    <div class="scrollable-content">
+    <div class="scrollable-content" ng-controller="detailCtrl">
         <div class="section">
             <img src="{{file}}">
         </div>
