--- a/public/src/tpl/detail.html
+++ b/public/src/tpl/detail.html
@@ -1,17 +1,31 @@
 <div content-for="title">
-    <span>Accordion</span>
+    <span>{{title||""}}</span>
 </div>
 
 <div class="scrollable">
     <div class="scrollable-content" ng-controller="detailCtrl">
         <div class="section">
-            <img src="{{file}}">
+            <img src="{{file||''}}">
         </div>
         <div class="section">
-            <span>title</span>
-            <span>222元</span>
+            <div class="pull-left">
+                <h3>{{title||""}}</h3>
+            </div>
+            <div class="pull-right">
+                <h3>{{price}}</h3>
+            </div>
         </div>
-
+        <div class="section">
+            <div class="pull-right">
+                <a class="remove-food" href="javascript:;" ng-click="removeFood()">
+                    <i class="fa fa-minus-circle"></i>
+                </a>
+                <span class="foodop-num" style="">{{foodNum}}</span>
+                <a class="add-food" style="" href="javascript:;" ng-click="addFood()">
+                    <i class="fa fa-plus-circle"></i>
+                </a>
+            </div>
+        </div>
         <div class="section">
             <div class="panel panel-default">
                 <div class="panel-heading">
