--- a/public/src/tpl/index.html
+++ b/public/src/tpl/index.html
@@ -1,18 +1,20 @@
-<div class="scrollable">
-    <div id="test2" class="scrollable-content" ng-controller="indexCtrl">
-        <div class="list-group text-center">
+<div class="scrollable" ng-controller="indexCtrl">
+  <div class="scrollable-content" index-scroll>
+    <div class="list-group text-center">
             <div class="list-group-item list-group-item-home">
                 <h3>Mobile Angular UI </h3>
             </div>
             <div class="r-food-list-item list-group-item list-group-item-home media" ng-repeat='food  in foodlist'>
-                <div class="media-body" ng-click="gotoDetail()">
-                    <div>
+              <div class="media-body">
+                <div>
                         <img ng-src="{{food.foodsrc}} " width="150px" height="131px">
                     </div>
                     <div class="r-food-list-item-des">
-                        <span class="r-food-name">{{food.foodname}}</span><br>
-                        <span class="r-food-calory">200卡路里</span><br>
-                        <span class="r-food-price">{{food.foodprice}}元</span>
+                      <span class="r-food-name">{{food.foodname}}</span>
+
+                      <span class="r-food-price">{{food.foodprice}}元</span> <br>
+                      <a href=""
+                         class="btn btn-primary" ng-click="gotoDetail()">查看详细</a>
                     </div>
                     <a href="/detail"></a>
                 </div>
