给首页的滚动条绑定scroll事件

--- a/public/src/tpl/index.html
+++ b/public/src/tpl/index.html
@@ -1,5 +1,7 @@
 <div class="scrollable" ng-controller="indexCtrl">
-  <div class="scrollable-content" index-scroll>
+
+  <div class="scrollable-content" my-scroll>
+
     <div class="list-group text-center">
             <div class="list-group-item list-group-item-home">
                 <h3>Mobile Angular UI </h3>
@@ -20,10 +22,12 @@
                 </div>
             </div>
             <div class="list-group-item list-group-item-home media" style="text-align: center;background: #FFFFFF">
-                <span>下拉刷新...</span>
+
+              <button>Refresh</button>
+              </li>
             </div>
         </div>
 
-    </div>
-</div>
 
+  </div>
+</div>
