下拉刷新第一版实现 当前仅能下拉刷新

--- a/public/src/tpl/index.html
+++ b/public/src/tpl/index.html
@@ -45,12 +45,11 @@
                 </div>
             </div>
             <div class="list-group-item list-group-item-home media" style="text-align: center;background: #FFFFFF">
-
-              <button>Refresh</button>
-              </li>
+              加载更多...
             </div>
         </div>
 
 
   </div>
+
 </div>
