临时保存 1 个人画面 2 首页Title 调整 3 首页响应式 调整

--- a/public/src/tpl/index.html
+++ b/public/src/tpl/index.html
@@ -1,3 +1,7 @@
+<div content-for="title">
+    <span>宅语菜园</span>
+</div>
+
 <div class="scrollable" ng-controller="indexCtrl">
 
   <div class="scrollable-content" my-scroll>
