--- a/public/src/tpl/login.html
+++ b/public/src/tpl/login.html
@@ -3,7 +3,7 @@
   <span>登录</span>
 </div>
 
-<div class="scrollable">
+<div class="scrollable" ng-controller="loginCtrl">
   <div class="scrollable-content section">
 
     <form role="form" ng-submit='submit()'>
