--- a/public/src/tpl/detail.html
+++ b/public/src/tpl/detail.html
@@ -37,10 +37,8 @@
             </div>
         </div>
         <div class="section">
-            <a href=""
-               class="btn btn-primary">加入购物车</a>
-            <a href=""
-               class="btn btn-primary">直接下单</a>
+            <a href="tel:15164096345" class="btn btn-primary r-order-btn">加入购物车</a>
+            <a href="" class="btn btn-primary r-order-btn">直接下单</a>
         </div>
 
     </div>
