--- a/public/src/tpl/profile.html
+++ b/public/src/tpl/profile.html
@@ -1,5 +1,5 @@
 <div class="scrollable">
-  <div class="scrollable-content">
+  <div class="scrollable-content" ng-controller="profileCtrl">
 
     <div class="list-group text-center">
       <div class="list-group-item list-group-item-home">
@@ -8,21 +8,21 @@
 
       <div class="list-group-item list-group-item-home" style="margin-top: 20px;">
 
-        <div class="media-body">
+        <div class="media-body" ng-click="addressClick();">
           我的地址 <i class="fa fa-chevron-right pull-right"></i>
         </div>
       </div>
 
       <div class="list-group-item list-group-item-home" style="margin-top: 20px;">
 
-        <div class="media-body">
+        <div class="media-body" ng-click="feebackClick()">
           意见反馈 <i class="fa fa-chevron-right pull-right"></i>
         </div>
       </div>
 
       <div class="list-group-item list-group-item-home" style="margin-top: 20px;">
 
-        <div class="media-body">
+        <div class="media-body" ng-click="callService()">
           客服电话:0411-11111111
         </div>
       </div>
