--- a/public/src/tpl/sidebar.html
+++ b/public/src/tpl/sidebar.html
@@ -6,10 +6,8 @@
       <a class="list-group-item" href="/detail">热门推荐 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="/accordion">我的订单 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="/overlay">购买流程 <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="/forms">质量保证 <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="/dropdown">联系我们 <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="/drag">Drag <span class="label label-danger">Experimental</span> <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="/carousel">Carousel <span class="label label-danger">Experimental</span> <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="/forms">质量保证 <span class="label label-danger">Experimental</span> <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="/dropdown">联系我们 <span class="label label-danger">Experimental</span> <i class="fa fa-chevron-right pull-right"></i></a>
     </div>
   </div>
 </div>
